# InfraWatch

./: .gitignore  LICENSING_TUTOR.md  README.md  SPECS.md  building-a-tui-installer.md  middleware.ts  next.config.mjs  package.json
.github/workflows/: build-airgap-bundle.yml  ci.yml  release.yml  test-installer.yml
app/: globals.css  layout.tsx  page.tsx
app/apps/: page.tsx
app/clusters/: page.tsx
app/connectors/: page.tsx
app/dashboards/: page.tsx
app/hosts/: page.tsx
app/kubernetes/: page.tsx
app/login/: page.tsx
app/nodes/: page.tsx
app/settings/: page.tsx
app/setup/: page.tsx
app/storage/: page.tsx
app/vm/: page.tsx
components/alerts/: alert-bell.tsx  alert-panel.tsx  alert-toast-watcher.tsx
components/charts/: capacity-breakdown.tsx  health-matrix.tsx  index.ts  ranking-panel.tsx  time-series-chart.tsx
components/dashboard/: capability-badge.tsx  capability-sections.tsx  cluster-card.tsx  connector-card.tsx  index.ts  (+8 more)
docs/: README.md  SCREENSHOT-GUIDE.md  build.sh  go.mod  hugo.dev.toml  hugo.prod.toml  hugo.toml  serve.sh
installer/: Cargo.toml
installer/src/: app.rs  main.rs  theme.rs
installer/src/installer/: app_setup.rs  config.rs  database.rs  deps.rs  executor.rs  mod.rs  preflight.rs  services.rs  verify.rs
installer/src/ui/: mod.rs
installer/src/ui/screens/: complete.rs  config.rs  error.rs  mod.rs  mode_select.rs  preflight.rs  progress.rs  verify.rs  welcome.rs
installer/src/ui/widgets/: checklist.rs  log_viewer.rs  phase_progress.rs  status_bar.rs
scripts/: airgap-setup.sh  bundle-debs-ubuntu.sh  install.sh
(+209 files in other folders)
