[package]
name = "infrawatch-installer"
version = "0.1.0"
edition = "2021"
description = "Production-grade TUI installer for InfraWatch"
authors = ["Nexus Quantum Tech"]

[[bin]]
name = "infrawatch-installer"
path = "src/main.rs"

[dependencies]
# TUI framework
ratatui = "0.29"
crossterm = "0.28"

# CLI parsing
clap = { version = "4", features = ["derive"] }

# Async (for downloads)
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"

# Downloads and checksums
reqwest = { version = "0.12", features = ["blocking"] }
sha2 = "0.10"

# System info
sysinfo = "0.32"
nix = { version = "0.29", features = ["user", "fs", "process"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
